<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/add_plant_form"
            android:layout_marginTop="-80dp"
            android:paddingTop="20dp"
            android:layout_below="@id/image_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/add_form_backgound">

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="start"
                    android:layout_weight="0.5"
                    android:id="@+id/plant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plant_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.5"
                    android:id="@+id/plant_specie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plant_specie"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/last_water"
                    android:textSize="16sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_water_inputLayout"
                    android:layout_marginStart="5dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/water_day"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/last_water"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/water_frequency"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="5dp"
                        android:layout_gravity="start"
                        android:layout_weight="0.5"
                        android:id="@+id/minSeekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_marginEnd="25dp"
                        android:layout_weight="0.5"
                        android:id="@+id/maxSeekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <SeekBar
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="-10dp"
                        android:id="@+id/waterFrequency"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:max="31"
                        android:progress="15" />

                    <TextView
                        android:id="@+id/showSeekbarProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/days"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="start"
                    android:layout_weight="0.5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/soil_moisture">

                    <AutoCompleteTextView
                        android:id="@+id/soil_moisture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/light_level">

                    <AutoCompleteTextView
                        android:id="@+id/light_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/ideal_temperatures"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/temp_start_it"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="start"
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/temperature_start"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/temperature_start"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:layout_weight="9"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:text="@string/hyphen"
                        android:textSize="30sp"
                        android:textAlignment="center"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/temp_end_it"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/temperature_end"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/temperature_end"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notes"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notes_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnUpload"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_plant"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background"/>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/image_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <!--Button for choosing image from gallery-->
            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/plant"
                android:contentDescription="@string/plant_image_holder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="50dp"
                    android:id="@+id/btnOpenGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_add_photo_alternate_24px"
                    android:tint="@color/colorPrimary"
                    android:padding="40dp"
                    android:contentDescription="@string/add_image_icon" />

                <!--Button for uploading image-->
                <ImageButton
                    android:textAllCaps="false"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="50dp"
                    android:id="@+id/btnOpenCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_add_a_photo_24px"
                    android:tint="@color/colorAccent"
                    android:padding="35dp"
                    android:contentDescription="@string/open_camera_icon" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
