<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_background_plant" />

        <TextView
            android:layout_marginEnd="20dp"
            android:layout_marginTop="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/title"
            android:textSize="35sp"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_marginTop="400dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/signUpEmail"
                android:textAllCaps="false"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/signInEmail"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInGoogle"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>