<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewPlant"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white"
    tools:context=".Fragments.ViewPlantFragment">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- IMAGE LAYOUT -->
                <RelativeLayout
                    android:id="@+id/image_view_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <ImageView
                        android:id="@+id/img_view"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/plant"
                        android:contentDescription="@string/plant_image_holder" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="-60dp"
                    android:id="@+id/plant_details_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add_form_backgound"
                    android:layout_below="@id/image_view_layout">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/name_and_specie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="30sp"
                            android:text="@string/plant_name"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_marginTop="5dp"
                            android:id="@+id/notes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/name_and_specie"
                            android:text="@string/notes"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:paddingEnd="5dp"
                            android:id="@+id/notes_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/notes"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp" />
                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/plant_details_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_plant_details"
                    android:orientation="vertical"
                    android:layout_below="@id/plant_details_one">

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_water_icon" />

                            <TextView
                                android:id="@+id/water_date_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_temperature" />

                            <TextView
                                android:id="@+id/temperatures_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_soil" />

                            <TextView
                                android:id="@+id/soil_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_light"
                                android:contentDescription="@string/icon_for_partial_sun" />

                            <TextView
                                android:id="@+id/light_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    <LinearLayout
        android:layout_gravity="bottom|right|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_anchor="@id/scroll"
        app:layout_anchorGravity="bottom|right|end">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_water_sign_only_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_delete_24px" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_edit_24px" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_arrow_up_18dp"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|right|end"/>
    </LinearLayout>
</FrameLayout>